--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ VITE_FIREBASE_STORAGE_BUCKET=your_project.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
+
+# Google Maps Configuration
+VITE_GOOGLE_MAPS_API_KEY=your_api_key
