--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^12.3.0",
     "gapi-script": "^1.2.0",
     "lucide-react": "^0.544.0",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
