--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "googleapis": "^161.0.0",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.6"
   }
 }
