--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,8 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
 
+# Gemini API Configuration
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
+
 # Google Maps Configuration
 VITE_GOOGLE_MAPS_API_KEY=your_api_key
