--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-oauth/google": "^0.12.2",
+    "@stripe/react-stripe-js": "^5.2.0",
+    "@stripe/stripe-js": "^8.0.0",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-router-dom": "^5.3.3",
     "class-variance-authority": "^0.7.1",
@@ -31,7 +33,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "tailwind-merge": "^3.3.1",
-    "three": "^0.180.0"
+    "three": "^0.180.0",
+    "stripe": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
